# CPPNGINE

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
Alignas/: CMakeLists.txt  main.cpp
Alignas/include/: Alignas.h
Alignas/src/: Main.cpp
CPPNGINE/: CPPNGINE.sln
CPPNGINE/CPPNGINE/: CPPNGINE.vcxproj  CPPNGINE.vcxproj.filters  CastOperator.h  CastOperator.hxx  Commun.cpp  Commun.h  Generic.h  Generic.hxx  InitializationLists.cpp  InitializationLists.h  Main.cpp  Ref.h  Ref.hxx  Signal.h  Signal.hxx  Simd.cpp  Simd.h  Slot.h  Slot.hxx  SlotConnection.h  SlotConnection.hxx  Variadique.cpp  Variadique.h  VariadiqueTemplate.cpp  VariadiqueTemplate.h  VariadiqueTemplate.hxx  commun.h  mmintrin.cpp  simd.cpp  simd.h  xintrin.cpp  xintrin.h  xmmintrin.cpp
CastOperator/: CMakeLists.txt  castOperator.hxx  main.cpp
CastOperator/include/: CastOperator.h  CastOperator.hpp  CastOperator.hxx
CastOperator/src/: Main.cpp
Decltype/: CMakeLists.txt
Decltype/src/: Main.cpp
Explicit/: CMakeLists.txt  explicit.cpp  main.cpp
Explicit/include/: Explicit.h
Explicit/src/: Explicit.cpp  Main.cpp
Generic/: CMakeLists.txt  generic.hpp  generic.hxx  main.cpp
Generic/include/: Generic.hxx
Generic/src/: Main.cpp
Inline/: CMakeLists.txt  main.cpp
Inline/include/: Inline.h  Inline.hpp
Inline/src/: Main.cpp
MoveSemantics/: CMakeLists.txt  main.cpp  moveSemantics.cpp
MoveSemantics/include/: MoveSemantics.hpp
MoveSemantics/src/: Main.cpp  MoveSemantics.cpp
Mutable/: CMakeLists.txt  main.cpp  mutable.cpp
Mutable/include/: Mutable.h
Mutable/src/: Main.cpp  Mutable.cpp
STDFunction/: CMakeLists.txt  function.hpp  function.hxx  main.cpp
STDFunction/include/: Function.h  Function.hpp  Function.hxx
STDFunction/src/: Main.cpp
STDInitializationLists/: CMakeLists.txt  initializationLists.cpp  initializationLists.hpp  main.cpp
STDInitializationLists/include/: InitializationLists.h
STDInitializationLists/src/: InitializationLists.cpp  Main.cpp
STDTuple/: CMakeLists.txt  main.cpp  tuple.hpp  tuple.hxx
STDTuple/include/: Tuple.h  Tuple.hpp  Tuple.hxx
STDTuple/src/: Main.cpp
Sfinae/: CMakeLists.txt  main.cpp
Sfinae/include/: Sfinae.h  Sfinae.hpp
Sfinae/src/: Main.cpp
Simd/: CMakeLists.txt
Simd/include/: Simd.h  Simd.hpp
Simd/src/: Emmintrin.cpp  Main.cpp  Mmintrin.cpp  Xmmintrin.cpp
Template/: CMakeLists.txt  main.cpp  template.cpp  template.hpp  template.hxx
Template/include/: Template.cpp  Template.hpp  Template.hxx
Template/src/: Main.cpp
ThreadLocal/: CMakeLists.txt  main.cpp
VirtualInheritance/: CMakeLists.txt  firstChild.hpp  main.cpp  root.hpp  secondChild.hpp  virtualInheritance.hpp
VirtualInheritance/include/: FirstChild.hpp  SecondChild.hpp  VirtualInheritance.hpp
VirtualInheritance/src/: Main.cpp
